--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.0.0",
     "axios": "^1.7.8",
     "clsx": "^2.1.1",
     "next": "15.0.3",
@@ -23,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
