--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.0.0",
     "axios": "^1.7.8",
