--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.0.0",
     "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
