--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.0.0",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
