--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "migrate": "npx prisma migrate dev --name add_nextauth_models",
     "generate": "npx prisma generate"
   },
+  "prisma": {
+    "seed": "npx ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@heroicons/react": "^2.2.0",
@@ -33,6 +36,7 @@
     "postcss": "^8",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
